--- a/article/prepare.tex
+++ b/article/prepare.tex
@@ -1,4 +1,16 @@
-\chapter{ルール及び事前準備}
+\chapter{本稿に関して}
+
+\section{本稿の目的}
+しばしば耳にする「数値計算」や「数値シミュレーション」，「仮想実験」などは一度は少し踏み込んだところまで触っておきたいもの．
+そのような簡単な理由から，分野問わず幅広い知見から上記項目をまとめていくことを目的にしている．
+特に，専門的になりすぎず初学者がとっつきやすいノート(ハンドブックと名付けた理由)になればと思っている．
+ネット上にはたくさんの知識が転がっている．
+特に，同じような目的からかwikiなりまとめなりのサイトも増え始めている．
+これらネットに転がっている知識もこのノートに集約できるなら最高の幸せでる．
+いつの日かこのノートのおかげで数値計算に入り込むことができたという人が現れてくれたら嬉しいな．
+なお，本稿のデザインは及びから拝借している．
+この場を持って感謝申し上げる．
+
 \section{ルール}
 短いコードならpdfに書き込み可．
 
