--- a/article/fdm_pde.tex
+++ b/article/fdm_pde.tex
@@ -1,19 +1,21 @@
 \chapter{偏微分方程式の差分法}
 \begin{abstract}
-
+もっとも基礎的な数値スキームである有限差分法(Finite Difference Method; FDM)を用いて，いくつかの有名な偏微分方程式を計算する．
 \end{abstract}
 
 \section{移流方程式}
-線形移流方程式
+線形の(スカラー)移流方程式\footnote{[English?]}は
 \begin{equation}
 \partial_t u+\nu\cdot\nabla u=f\quad\text{in $(0,\infty)\times\Omega$}
 \end{equation}
-を有限差分法\footnote{finite difference method; FDM}で計算することを考える．
-ここで，$\nu\in\mathbb{R}^d$はゼロでない定数ベクトルである．
+によって記述される．
+ここで，$u:\Omega\to\mathbb{R}$は未知関数，$\nu\in\mathbb{R}^d$はゼロでない定数ベクトルであり，$f=f(t,x):(0,\infty)\times\Omega\to\mathbb{R}$は既知の関数ある．もし$\Omega=\mathbb{R}^d$ならば，解は
+$$
+u(t,x)=u(0,x-t\nu)+\int_0^t f(s,x+(s-t)\nu)ds\quad(x\in\mathbb{R}^d,t\ge0)
+$$
+とかける(\cite[Section 2.1.2]{evans})
 
-\subsection{解の存在など}
-
-\subsection{ソースコード}
+\subsection{離散化}
 
 
 \section{Poisson方程式}
@@ -23,6 +25,9 @@
 
 
 \section{熱方程式}
+線形熱方程式の境界値問題は
+
+
 以下の記号を用いる．
 \begin{itemize}
 \item[-] $\delta \ast$ ($\ast=t,x,y$)：時間及び空間刻み幅
@@ -31,17 +36,17 @@
 \end{itemize}
 
 \subsection{ 1次元の問題}
-次の熱方程式に対するDirichlet境界値問題を数値計算することを考える．
+1次元の線形熱方程式に対する周期境界値問題を考える:
 \begin{equation}
 \label{e:heat1d}
 	\begin{cases}
-		\partial_{t}u(t,x)-c\partial_{xx}u(t,x)=0\quad&\text{for $(t,x)\in(0,\infty)\times(0,1)$,}\\
-		u(0,x)=\phi(x)\quad&\text{for $x\in[0,1]$,}\\
-		u(t,0)=u(t,1)=0\quad&\text{for $t\in[0,\infty)$.}
+		u_t(t,x)-cu_{xx}(t,x)=f(t,x)\quad&(t>0,\ 0<x<1)\\
+		u(0,x)=g(x)\quad&(0\le x\le 1)\\
+		u(t,0)=u(t,1)\quad&(t\ge0).
 	\end{cases}
 \end{equation}
 
-\subsection{陽解法}
+\subsubsection{陽解法}
 内部の方程式は，
 $$
 \frac{u^{n+1}_{i}-u^{n}_{i}}{\delta t}-c\frac{u^{n}_{i+1}-2u^{n}_{i}+u^{n}_{i-1}}{(\delta x)^{2}}=0
@@ -98,232 +103,6 @@ u^{1}_{i}=\Phi_{i}+\Psi_{i}\delta t+\frac{\lambda}{2}(\Phi_{i+1}-2\Phi_{i}+\Phi_
 $$
 で決まる．ここで，$\Phi_{i}:=\phi(x_i)$及び$\Psi_{i}:=\psi(x_i)$である．なお，境界条件は$u^{n}_{0}=u^{n}_{N}=0$で決まる．
 
-\begin{lstlisting}[caption=C++のコード内からgnuplotを呼び出し$\sin x$を描く]
-//
-//  main_wave.cpp
-//  1d wave_equation: u_tt - c^2 u_xx=0 (c:const.)
-//
-//  Created by 難波時永 on 5/28/16.
-//  Copyright (c) 2016 難波時永. All rights reserved.
-//
-
-# include <cstdlib>
-# include <iostream>
-# include <iomanip>
-# include <fstream>
-# include <ctime>
-# include <cmath>
-# include <cstring>
-
-using namespace std;
-
-# include "fd1d_wave.hpp"
-
-
-void main()
-{
-	
-}
-
-//compute lambda
-double fd1d_wave_alpha ( int x_num, double x1, double x2, int t_num, double t1, double t2, double c )
-{
-	double delta_t;
-	double delta_x;
-	double lambda;
-
-	delta_t = ( t2 - t1 ) / ( double ) ( t_num - 1 );
-	delta_x = ( x2 - x1 ) / ( double ) ( x_num - 1 );
-	alpha = c * delta_t / delta_x;
-
-	cout << "\n";
-	cout << "Stability condition LAMBDA = C * DT / DX = " << lambda << "\n";
-
-	if ( 1.0 < r8_abs ( alpha ) ){
-    	cerr << "\n";
-    	cerr << "FD1D_WAVE_ALPHA - Warning!\n";
-    	cerr << "The stability condition |ALPHA| <= 1 fails.\n";
-    	cerr << "Computed results are liable to be inaccurate.\n";
-  	}
-
-  	return alpha;
-}
-
-//first step: solve wave eq.
-double *fd1d_wave_start ( int x_num, double x_vec[], double t, double t_delta, double alpha,
-						double u_x1 ( double t ), double u_x2 ( double t ),
-						double *ut_t1 ( int x_num, double x_vec[] ), double u1[] )
-{
-  	int j;
-  	double *u2;
-  	double *ut;
-
-  	ut = ut_t1 ( x_num, x_vec );
-
-  	u2 = new double[x_num];
-
-  	u2[0] = u_x1 ( t );
-
-  	for ( j = 1; j < x_num - 1; j++ )
-  	{
-    	u2[j] =           alpha * alpha   * u1[j+1] / 2.0
-        	    + ( 1.0 - alpha * alpha ) * u1[j] 
-            	+         alpha * alpha   * u1[j-1] / 2.0
-            	+         t_delta         * ut[j];
-  	}
-
-  	u2[x_num-1] = u_x2 ( t );
-
-  	delete [] ut;
-
-  	return u2;
-}
-
-//computes steps
-double *fd1d_wave_step ( int x_num, double t, double alpha, 
-  double u_x1 ( double t ), double u_x2 ( double t ), double u1[], double u2[] )
-{
-	int j;
-  	double *u3;
-
- 	u3 = new double[x_num];
-
-  	u3[0] = u_x1 ( t );
-
-  	for ( j = 1; j < x_num - 1; j++ ){
-    	u3[j] =                 alpha * alpha   * u2[j+1] 
-        	  	+ 2.0 * ( 1.0 - alpha * alpha ) * u2[j]
-            	+               alpha * alpha   * u2[j-1] 
-            	-                                 u1[j];
-  	}
-
-  	u3[x_num-1] = u_x2 ( t );
-
-  	return u3;
-}
-
-//evaluate a piecewise linear spline
-double *piecewise_linear ( int nd, double xd[], double yd[], int nv, double xv[] )
-{
-  	int id;
-  	int iv;
-  	double *yv;
-
-  	yv = new double[nv];
-
-  	for ( iv = 0; iv < nv; iv++ ){
-    	if ( xv[iv] < xd[0] ){
-     		yv[iv] = yd[0];
-    	}
-    	else if ( xd[nd-1] < xv[iv] ){
-   			yv[iv] = yd[nd-1];
-    	}
-    	else{
-    		for ( id = 1; id < nd; id++ ){
-        		if ( xv[iv] < xd[id] ){
-            	yv[iv] = ( ( xd[id] - xv[iv]            ) * yd[id-1] 
-                	   + (          xv[iv] - xd[id-1] ) * yd[id] ) 
-                   	   / ( xd[id]          - xd[id-1] );
-          		break;
-   	        	}
-        	}
-    	}
-  	}
-	return yv;
-}
-
-//return the absolute vale of an R8
-double r8_abs ( double x )
-{
-	double value;
-
-  	if ( 0.0 <= x ){
- 	   value = + x;
-  	}
-  	else{
-    	value = - x;
-  	}
-  	return value;
-}
-
-//writes an R8MAT file
-void r8mat_write ( string output_filename, int m, int n, double table[] )
-{
-	int i;
-  	int j;
-  	ofstream output;
-//
-//  Open the file.
-//
-  	output.open ( output_filename.c_str ( ) );
-
-  	if ( !output ){
-    	cerr << "\n";
-    	cerr << "R8MAT_WRITE - Fatal error!\n";
-    	cerr << "Could not open the output file.\n";
-    	exit ( 1 );
-  	}
-//
-//  Write the data.
-//
-	for ( j = 0; j < n; j++ ){
-		for ( i = 0; i < m; i++ ){
-	    	output << "  " << setw(24) << setprecision(16) << table[i+j*m];
-    	}
-    	output << "\n";
-	}
-//
-//  Close the file.
-//
-  	output.close ( );
-
-  	return;
-}
-
-//creates a vector of linearly spaced values
-double *r8vec_linspace_new ( int n, double a_first, double a_last )
-{
-	double *a;
-	int i;
-
-  	a = new double[n];
-
-  	if ( n == 1 ){
-    	a[0] = ( a_first + a_last ) / 2.0;
-    }
-  	else{
-    	for ( i = 0; i < n; i++ ){
-		    a[i] = ( ( double ) ( n - 1 - i ) * a_first 
-        	     + ( double ) (         i ) * a_last ) 
-            	 / ( double ) ( n - 1     );
-   		}
-  	}
-  	return a;
-}
-
-//prints the current YMDHMS date as a time stamp
-void timestamp ( )
-{
-	# define TIME_SIZE 40
-
-  	static char time_buffer[TIME_SIZE];
-  	const struct std::tm *tm_ptr;
-  	size_t len;
-  	std::time_t now;
-
-  	now = std::time ( NULL );
-  	tm_ptr = std::localtime ( &now );
-
-  	len = std::strftime ( time_buffer, TIME_SIZE, "%d %B %Y %I:%M:%S %p", tm_ptr );
-
-  	std::cout << time_buffer << "\n";
-
-  	return;
-	# undef TIME_SIZE
-}
-\end{lstlisting}
-
-
 \subsection{2次元の問題}
 正方領域上の波動方程式に対するDirichlet境界値問題(固定境界値問題)を数値計算することを考える．
 \begin{equation}
@@ -353,3 +132,13 @@ $$
 \section{いくつかの応用}
 \subsection{熱移流方程式}
 \subsection{分散波動方程式}
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{thebibliography}{99}
+  \bibitem{evans} L.~C.~Evans, \emph{Partial Differential Equations}, Partial Differential Equations, in the series Graduate studies in mathematics,
+Second Edition v. 19, American Math. Society, 2010.
+  \end{thebibliography}
